remove figure in berge theorem, need to detail proof

--- a/src/competitive_programming.tex
+++ b/src/competitive_programming.tex
@@ -21869,18 +21869,20 @@ For a given bipartite graph $G$, a matching $M$ is maximum iff $G$ has no augmen
 ($\Leftarrow$) If $G$ has no augmenting path with respect to $M$, then the matching $M$ is maximum.
 \onslide<5-> Suppose that there exists a matching $M'$ such that $|M'| > |M|$.
 
-\begin{overlayarea}{1\textwidth}{0.5\textheight}
-\begin{center}
-\includegraphics[width=5cm]<6>{berge_theorem.pdf}
-\includegraphics[width=5cm]<7>{berge_theorem1.pdf}
-\includegraphics[width=5cm]<8>{berge_theorem2.pdf}
-\includegraphics[width=5cm]<9>{berge_theorem3.pdf}
-\includegraphics[width=5cm]<10>{berge_theorem4.pdf}
-\includegraphics[width=5cm]<11>{berge_theorem5.pdf}
-\includegraphics[width=5cm]<12>{berge_theorem6.pdf}
-\includegraphics[width=5cm]<13>{berge_theorem7.pdf}
-\end{center}
-\end{overlayarea}
+TO DO
+
+%% \begin{overlayarea}{1\textwidth}{0.5\textheight}
+%% \begin{center}
+%% \includegraphics[width=5cm]<6>{berge_theorem.pdf}
+%% \includegraphics[width=5cm]<7>{berge_theorem1.pdf}
+%% \includegraphics[width=5cm]<8>{berge_theorem2.pdf}
+%% \includegraphics[width=5cm]<9>{berge_theorem3.pdf}
+%% \includegraphics[width=5cm]<10>{berge_theorem4.pdf}
+%% \includegraphics[width=5cm]<11>{berge_theorem5.pdf}
+%% \includegraphics[width=5cm]<12>{berge_theorem6.pdf}
+%% \includegraphics[width=5cm]<13>{berge_theorem7.pdf}
+%% \end{center}
+%% \end{overlayarea}
 
 \end{frame}
 
